--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
                         "node"      : ">=0.8.14"
     },
     "dependencies": {
-                        "escodegen" : *,
-                        "esprima"   : *
+                        "escodegen" : "*",
+                        "esprima"   : "*"
     }
 }
